--- a/platformio.ini
+++ b/platformio.ini
@@ -8,21 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
+[env:development]
+platform = espressif8266@2.6.3
 board = nodemcuv2
 framework = arduino
-lib_extra_dirs = C:\Users\gabri\Documents\Platformio\Extra_Lib_Lemon_RV_5\
-lib_deps = 
-	;tzapu/WiFiManager@^0.16.0
-	;bblanchon/ArduinoJson@^6.18.0
-	;lifely-cc/Lifely Agrumino Lemon@^1.4.4
+lib_extra_dirs = C:\Users\gabri\Documents\Platformio\Orange_Extra_Lib
+lib_deps = bblanchon/ArduinoJson@6.18.0
 upload_speed = 3000000
 monitor_speed = 115200
 board_build.f_cpu = 160000000L
 upload_protocol = esptool
-extra_scripts = erase_esp8266_before.py
-				;rename_bin_after_build.py
 build_flags = -w -D PIO_FRAMEWORK_ARDUINO_ESPRESSIF_SDK263
-		;-DVERSION=${this.custom_prog_version}	
-;custom_prog_version = ALCPSS180
+board_erase = true
+extra_scripts = pre:erase_esp8266_before.py
+;upload_port = COM6
