Rev. 10.3.4 – add save ID device into a txt e minor fix

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,5 +20,11 @@ board_build.f_cpu = 160000000L
 upload_protocol = esptool
 build_flags = -w -D PIO_FRAMEWORK_ARDUINO_ESPRESSIF_SDK263
 board_erase = true
-extra_scripts = pre:erase_esp8266_before.py
+extra_scripts = pre:erase_esp8266_before.py, pre:auto_save_fullname.py
+
+;;, auto_save_fullname.py
+
+
+
+
 ;upload_port = COM6
